CSS theme added

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,20 +3,24 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
-	<link rel="stylesheet" type="text/css" href="/css/style.css">
 	
-	<link rel="stylesheet" type="text/css" href="/css/landing-page.css">
+	<!--Bootstrap-->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<!--Bootstrap Theme-->
+    <link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="/css/round-about.css">
 	
-	<!-- Bootstrap Core CSS -->
-    	<link href="css/bootstrap.min.css" rel="stylesheet">
 
-    {{!-- JQuery --}}
-	<script src="js/jquery.js"></script>
+	<!-- Latest compiled and minified JavaScript for Bootstrap -->
 
-	<script src="/script.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-	<title>sayHello</title>
+{{!--JS file--}}
+<script src="/script.js"></script>
+
+	<title>{{title}}</title>
 </head>
 <body>
 	{{!-- Import header partials --}}
@@ -27,5 +31,9 @@
 
 	{{!-- Import footer partials --}}
 	{{>footer}}
+
+	{{!--Jquery--}}
+
+	<script   src="http://code.jquery.com/jquery-3.1.0.min.js"   integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="   crossorigin="anonymous"></script>
 </body>
 </html>
