--- a/views/guest.handlebars
+++ b/views/guest.handlebars
@@ -1,3 +1,14 @@
-{{#each guests}}
-   Guest!
+{{# each guests}}
+   <div class = "row">
+   {{# each this}}
+   	<div class= "col-sm-6 col-md-4">
+   		<div class= "thumbnail">
+   		 <img src = "{{this.imagePath}}" alt= "..." class="img-responsive">
+   		 <div class="caption">
+   		 <h3>{{this.firstName}}{{this.lastName}}</h3>
+   		 </div>
+   		 </div>
+   	</div>
+{{/each}}
+</div>
 {{/each}}
