--- a/views/guest.handlebars
+++ b/views/guest.handlebars
@@ -1,14 +1,24 @@
+<!-- Table Row -->
+<div class="row">
+<div class="col-lg-12">
+<h2 class="page-header">Say Hello to:</h2>
+</div>
+
 {{# each guests}}
    <div class = "row">
    {{# each this}}
-   	<div class= "col-sm-6 col-md-4">
-   		<div class= "thumbnail">
-   		 <img src = "{{this.imagePath}}" alt= "..." class="img-responsive">
-   		 <div class="caption">
+   	 <div class="col-xs-6 col-md-3 text-center">
+   	 <div class = thumbnail >
+   	 <img class = "img-circle img-responsive img-center" src = "{{this.imagePath}}" alt= "...">
+     <div class = "caption">
    		 <h3>{{this.firstName}}{{this.lastName}}</h3>
-   		 </div>
-   		 </div>
+          <small>Position Here</small>
+          <p><img src ="../img/linkedin.png" a href="{{this.linkedin}}" class="btn btn-primary" role="button"></p>
+          </div>
+      </div>
    	</div>
+  </div>
 {{/each}}
 </div>
 {{/each}}
+
