--- a/views/user/signup.handlebars
+++ b/views/user/signup.handlebars
@@ -8,7 +8,7 @@
 	 		{{/each}}
 	 	</div>
 	 	{{/if}}
-	 	<form action="/guest/signup" method="post">
+	 	<form action="/user/signup" method="post">
 	 		<div class="form-group">
 	 			<label for "email">Email</label>
 	 			<input type="text" id="email" name="email" class="form-control">
