changed theme, fixed routes and header

--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,10 +1,25 @@
   <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
-           
-                <a class="navbar-brand" href="#">sayHello</a>
-            </div>
-            
+ <div id="navbar-main">
+      <!-- Fixed navbar -->
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+        <p>sayHello</p>
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="icon icon-shield" style="font-size:30px; color:#3498db;"></span>
+          </button>
+          <a class="navbar-brand hidden-xs hidden-sm" href="#home"><span class="icon icon-shield" style="font-size:18px; color:#3498db;"></span></a>
         </div>
-   
-    </nav>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+
+            <li><a href="" class="smoothScroll">Home</a></li>
+			<li> <a href="/user/signup" class="smoothScroll">Sign In</a></li>
+			<li> <a href="/guest" class="smoothScroll"> Guest</a></li>
+			<li> <a href="/admin" class="smoothScroll"> Admin </a></li>
+			<li> <a href="user/profile" class="smoothScroll"> Profile</a></li>
+			<li> <a href="/" class="smoothScroll">Logout</a></li>
+        </div><!--/.nav-collapse -->
+      </div>
+    </div>
+    </div>
