--- a/views/user/signin.handlebars
+++ b/views/user/signin.handlebars
@@ -1,6 +1,17 @@
+<div id="greywrap">
+			<div class="row">
+				<div class="col-lg-4 callout">
+					<span class="icon icon-stack"></span>
+					<h2>sayHello</h2>
+					<p>Enter Video Header here </p>
+				</div><!-- col-lg-4 -->
+
+			</div>
+</div>
+
 <div class="row">
 	<div class="col-md-4 col-md-offset-4">
-	 	<h1>Register</h1>
+	 	<h1>Sign Up</h1>
 	 	{{#if hasErrors}}
 	 	<div class= "alert alert-danger">
 	 		{{# each messages}}
