--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,9 +1,11 @@
- <footer>
-        <div class="container">
+
+    <!-- Footer -->
+        <footer>
             <div class="row">
-                <div class="col-md-4">
-                    <span class="copyright">&copy 2016 Danielle Bowman</span>
+                <div class="col-lg-12">
+                    <p>Copyright &copy; Danielle Bowman 2016</p>
                 </div>
+                <!-- /.col-lg-12 -->
             </div>
-        </div>
-</footer>
+            <!-- /.row -->
+        </footer>
