added path package and fixed public file linking issue

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -16,7 +16,7 @@
 				
 				<div class="col-lg-4 callout">
 					<span class="icon icon-heart"></span>
-					<h2>Crafted with Love</h2>
+					<h2>Administrator</h2>
 					<p>We don't make sites, we craft themes with love & passion. That is our most valued secret. We only do thing that we love.   </p>
 				</div><!-- col-lg-4 -->	
 			</div><!-- row -->
