index and header handlebars done

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,23 +1,32 @@
-<p>{{title}}</p>
+<!-- ==== HEADERWRAP ==== -->
+	    <div id="headerwrap" id="home" name="home">
+			<header class="clearfix">
+	  		 		<h1><span class="glyphicon glyphicon-link"></span></h1>
+	  		 		<p>sayHello</p>
+	  		 		<p>Your networking resource.</p>
+	  		</header>	    
+	    </div><!-- /headerwrap -->
+
 <!-- ==== GREYWRAP ==== -->
 		<div id="greywrap">
 			<div class="row">
-				<div class="col-lg-4 callout">
-					<span class="icon icon-stack"></span>
-					<h2>sayHello</h2>
-					<p>Enter Video Header here </p>
-				</div><!-- col-lg-4 -->
 					
 				<div class="col-lg-4 callout">
-					<span class="icon icon-eye"></span>
-					<h2>Retina Ready</h2>
-					<p>You can use this theme with your iPhone, iPad or MacBook Pro. This theme is retina ready and that is awesome. </p>
+					<button type="button"><a href='admin' span class="glyphicon glyphicon-paperclip">
+					</span>
+					</a>
+					</button>
+					<h2>Administrator</h2>
+					<p>Sign in here to organize your event.</p>
 				</div><!-- col-lg-4 -->	
 				
 				<div class="col-lg-4 callout">
-					<span class="icon icon-heart"></span>
-					<h2>Administrator</h2>
-					<p>We don't make sites, we craft themes with love & passion. That is our most valued secret. We only do thing that we love.   </p>
+					<button type ="button"><a href = 'user/signup'
+					span class="glyphicon glyphicon-link"></span>
+					</a>
+					</button>
+					<h2>Guest</h2>
+					<p>Sign in here to see who you can look foward to saying Hello to.</p>
 				</div><!-- col-lg-4 -->	
 			</div><!-- row -->
 		</div><!-- greywrap -->
