--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -40,7 +40,7 @@
 
 	<title>{{title}}</title>
 </head>
-<body>
+ <body>
 	{{!-- Import header partials --}}
 	{{>header}}
 
@@ -49,7 +49,16 @@
 
 	{{!-- Import footer partials --}}
 	{{>footer}}
+ <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+        
 
+    <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="assets/js/retina.js"></script>
+    <script type="text/javascript" src="assets/js/jquery.easing.1.3.js"></script>
+    <script type="text/javascript" src="assets/js/smoothscroll.js"></script>
+    <script type="text/javascript" src="assets/js/jquery-func.js"></script>
 
 
 </body>
