--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,21 +1,21 @@
-  <!-- Navigation -->
+   <body data-spy="scroll" data-offset="0" data-target="#navbar-main"><!-- Navigation -->
  <div id="navbar-main">
       <!-- Fixed navbar -->
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-        <p>sayHello</p>
+        <h2>sayHello</h2>
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon icon-shield" style="font-size:30px; color:#3498db;"></span>
+            <span class="glyphicon glyphicon-link" style="font-size:30px; color:#3498db;"></span>
           </button>
-          <a class="navbar-brand hidden-xs hidden-sm" href="#home"><span class="icon icon-shield" style="font-size:18px; color:#3498db;"></span></a>
+          <a class="navbar-brand hidden-xs hidden-sm" href="#home"><span class="glyphicon glyphicon-link" style="font-size:18px; color:#3498db;"></span></a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
 
-            <li><a href="" class="smoothScroll">Home</a></li>
+            <li><a href="/" class="smoothScroll">Home</a></li>
 			<li> <a href="/user/signup" class="smoothScroll">Sign In</a></li>
-			<li> <a href="/guest" class="smoothScroll"> Guest</a></li>
+			<li> <a href="/guest" class="smoothScroll"> Guest</a></li> 
 			<li> <a href="/admin" class="smoothScroll"> Admin </a></li>
 			<li> <a href="user/profile" class="smoothScroll"> Profile</a></li>
 			<li> <a href="/" class="smoothScroll">Logout</a></li>
@@ -23,3 +23,4 @@
       </div>
     </div>
     </div>
+   </body>
