--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,11 +1,7 @@
 
-    <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Danielle Bowman 2016</p>
-                </div>
-                <!-- /.col-lg-12 -->
+ <div id="footerwrap">
+            <div class="container">
+                <h4>Created by Danielle Bowman &copy 2016</h4>
+                
             </div>
-            <!-- /.row -->
-        </footer>
+        </div>
