--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -15,9 +15,9 @@
 
             <li><a href="/" class="smoothScroll">Home</a></li>
 			<li> <a href="/user/signup" class="smoothScroll">Sign In</a></li>
-			<li> <a href="/guest" class="smoothScroll"> Guest</a></li> 
+			<li> <a href="/guest" class="smoothScroll"> All Guests</a></li> 
 			<li> <a href="/admin" class="smoothScroll"> Admin </a></li>
-			<li> <a href="user/profile" class="smoothScroll"> Profile</a></li>
+			<li> <a href="user/table" class="smoothScroll"> Table</a></li>
 			<li> <a href="/" class="smoothScroll">Logout</a></li>
         </div><!--/.nav-collapse -->
       </div>
