fixed jquery connection issue and path to table page

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,8 +11,8 @@
 		<div id="greywrap">
 			<div class="row">
 					
-				<div class="col-lg-4 callout">
-					<button type="button"><a href='admin' span class="glyphicon glyphicon-paperclip">
+				<div class="col-lg-6 callout">
+					<button type="button" class="btn btn-danger"><a href='admin' span class="glyphicon glyphicon-paperclip">
 					</span>
 					</a>
 					</button>
@@ -20,9 +20,9 @@
 					<p>Sign in here to organize your event.</p>
 				</div><!-- col-lg-4 -->	
 				
-				<div class="col-lg-4 callout">
-					<button type ="button"><a href = 'user/signup'
-					span class="glyphicon glyphicon-link"></span>
+				<div class="col-lg-6 callout">
+					<button type ="button" class="btn btn-danger"><a href = 'user/signup'
+					span class="glyphicon glyphicon-link" color="white"></span>
 					</a>
 					</button>
 					<h2>Guest</h2>
