--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -1,3 +1,4 @@
+
 <section class="section-divider textdivider divider4">
 			<div class="container">
 				<h1>Welcome</h1>
@@ -5,7 +6,7 @@
 				<p>Please enter your guests information.</p>
 			</div><!-- container -->
 		</section><!-- section -->
-
+<section class="section-divider">
 <div class="col-lg-5">
 	<form action ="" method="post" class="form-horizontal" role="form">
 	<div class="form-group">
@@ -40,3 +41,4 @@
 					   </form><!-- form -->
 					   
 </div>
+</section>
