--- a/views/user/signup.handlebars
+++ b/views/user/signup.handlebars
@@ -1,3 +1,4 @@
+<section class="section-divider textdivider divider4">
 <div class="row">
 	<div class="col-md-4 col-md-offset-4">
 	 	<h1>Register</h1>
@@ -23,3 +24,4 @@
 	
 	</div>
 </div>
+</section>
