--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -1,13 +1,11 @@
 
-<section class="section-divider textdivider divider4">
+<section class="section-divider textdivider divider1">
 			<div class="container">
 				<h1>Welcome</h1>
 				<hr>
 				<p>Please enter your guests information.</p>
 			</div><!-- container -->
-		</section><!-- section -->
-<section class="section-divider">
-<div class="col-lg-5">
+	<div class="col-md-4 col-md-offset-4">
 	<form action ="" method="post" class="form-horizontal" role="form">
 	<div class="form-group">
 	 <label for="firstName" class="col-lg-4 control-label"></label>
