--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -5,6 +5,8 @@
 				<hr>
 				<p>Please enter your guests information.</p>
 			</div><!-- container -->
+			</section>
+<section class="section-divider">
 	<div class="col-md-4 col-md-offset-4">
 	<form action ="" method="post" class="form-horizontal" role="form">
 	<div class="form-group">
@@ -39,4 +41,23 @@
 					   </form><!-- form -->
 					   
 </div>
+</section>
+
+<section class="section-divider">
+<h1> Master Guest List</h2>        
+{{# each guests}}
+   <div>
+   {{# each this}}
+   	 <div class="col-lg-1 centered">
+     <img class="img img-circle" src="{{this.imagePath}}" height="120px" width="120px" alt="">
+          <br>
+          <h4><b>{{this.firstName}}{{this.lastName}}</b></h4>
+          <p>position</p>
+          <p>Table number: {{this.table}}</p>
+      </div><!-- col-lg-3 -->
+   
+  </div><!--row-->
+{{/each}}
+</div><!--container-->
+{{/each}}
 </section>
