--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -55,6 +55,11 @@
     <script type="text/javascript" src="/assets/js/jquery.easing.1.3.js"></script>
     <script type="text/javascript" src="/assets/js/smoothscroll.js"></script>
     <script type="text/javascript" src="/assets/js/jquery-func.js"></script>
+    
+{{!--admin js page --}}
+    <script src="/js/script.js"></script>
+}
+}
 
 
 
