switched to mongojs

--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -6,8 +6,8 @@
 				<p>Please enter your guests information.</p>
 			</div><!-- container -->
 			</section>
-<section class="section-divider">
-	<div class="col-lg-6">
+<section class="section-divider row-lg-12">
+	<div class="col-lg-3">
 	<form action ="/guest/submit" method="post" class="form-horizontal" role="form">
 	<div class="form-group">
 	 <label for="firstName" class="row-med-4 control-label"></label>
