--- a/views/user/profile.handlebars
+++ b/views/user/profile.handlebars
@@ -3,7 +3,7 @@
     <br>
     <br>
     <div class="row white centered">
-        <h1 class="centered">Your table: #here </h1>
+        <h1 class="centered">Your Table #:</h1>
         <hr>
         <br>
         <br>
@@ -11,7 +11,7 @@
 {{# each guests}}
    <div class = "row white centered">
    {{# each this}}
-   	 <div class="col-lg-3 centered">
+     <div class="col-lg-3">
      <img class="img img-circle" src="{{this.imagePath}}" height="120px" width="120px" alt="">
           <br>
           <h4><b>{{this.firstName}}{{this.lastName}}</b></h4>
@@ -24,3 +24,4 @@
 {{/each}}
 </div><!--container-->
 {{/each}}
+</div>
