--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -14,7 +14,7 @@
 
 
 	<p>
-	<form class="form-horizontal" role= "form" form action ="/guest/submit" method="post">
+	<form class="form-horizontal" id="adminInput">
 	<div class="form-group">
 	 <label for="firstName" class="col-lg-4 control-label"></label>
 			<div class="col-lg-10">
@@ -59,14 +59,19 @@
 			</div>
 	 <div class="form-group">
 	 <div class="col-lg-10">
-		    <button type="submit" id="addGuest" a href="/submit" class="btn btn-success">Enter</button>
+		    <button type="submit" id="addGuest" class="btn btn-success">Enter</button>
 			</div>
 			</div>
 	</form><!-- form -->		   
  	</p>
  	</div>
 
- 	
+ 	<div class = "col-lg-6" id="masterList">
+      <table class = "table table-striped table-responsive" id="unread">
+            <tr><th>First Name</th><th>Last Name</th><th>Position</th><th>Table</th></tr>
+      </table>
+
+ 	<!-- 
    <div class = "col-lg-6" id="list">
  	<p>
  	<table class= "table table-striped table-responsive" id="adminList">
@@ -88,15 +93,16 @@
     </tr>
     {{/each}}
     </tbody>
-    </table>
+    </table> -->
 
 
 	<div id = "buttons">
 	<button id="tablesort">Sort by Table</button>
 	</div> 
 
-</p>
+
 </div>
 </div>
 </div>
+
 </section>
