added table to guest route

--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -66,8 +66,8 @@
  	</p>
  	</div>
 
- 	<div class = "col-lg-6" id="masterList">
-      <table class = "table table-striped table-responsive" id="unread">
+ 	<div class = "col-lg-6" id="results">
+      <table class = "table table-striped table-responsive" id="masterList">
             <tr><th>First Name</th><th>Last Name</th><th>Position</th><th>Table</th></tr>
       </table>
 
