--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,7 +1,9 @@
-
+<footer>
  <div id="footerwrap">
             <div class="container">
+            
                 <h4>Created by Danielle Bowman &copy 2016</h4>
                 
             </div>
         </div>
+</footer>
