--- a/views/user/profile.handlebars
+++ b/views/user/profile.handlebars
@@ -25,3 +25,7 @@
 </div><!--container-->
 {{/each}}
 </div>
+
+<button type="button" class="btn btn-danger"><a href='guest'> See Full List of Attendees
+          </a>
+          </button>
