--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,6 +7,7 @@
 	  		</header>	    
 	    </div><!-- /headerwrap -->
 
+
 <!-- ==== GREYWRAP ==== -->
 		<div id="greywrap">
 			<div class="row">
@@ -17,14 +18,17 @@
 					</a>
 					</button>
 					<h2>Administrator</h2>
-					<p>Sign in here to organize your event.</p>
+					<p>Click here to organize your event.</p>
 				</div><!-- col-lg-4 -->	
 				
 				<div class="col-lg-6 callout">
-					<button type ="button" class="btn btn-danger"><a href = 'user/signup'
-					span class="glyphicon glyphicon-link" color="white"></span>
+				<!--Triggers modal-->
+					<button type ="button" class="btn btn-danger" id="myBtn">
+					<a href= 'user/table' span class="glyphicon glyphicon-link" color="white"></span>
 					</a>
 					</button>
+
+				
 					<h2>Guest</h2>
 					<p>Sign in here to see who you can look foward to saying Hello to.</p>
 				</div><!-- col-lg-4 -->	
