--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -400,12 +400,12 @@ a:after {
 
 .textdivider h1 {
 	padding-top: 70px;
-	color: white;
+	color: black;
 	font-size: 40px;
 }
 
 .textdivider p {
-	color: white;
+	color: black;
 	font-size: 25px;
 }
 
