--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -1,11 +1,11 @@
 
-<section class="section-divider textdivider divider1">
+<section class="section-divider textdivider divider4">
 			<div class="container">
-				<h1>Welcome</h1>
+				<h1><strong>Welcome</strong></h1>
 				<hr>
-				<p>Please enter your guests information.</p>
+				<p><strong>Please enter your guests information.</strong></p>
 			</div><!-- container -->
-			</section>
+</section>			
 
 <div class="container">
 
@@ -59,7 +59,7 @@
 			</div>
 	 <div class="form-group">
 	 <div class="col-lg-10">
-		    <button type="submit" id="addGuest" class="btn btn-success">Enter</button>
+		    <button type="submit" id="addGuest" class="btn btn-success centered">Enter</button>
 			</div>
 			</div>
 	</form><!-- form -->		   
@@ -71,38 +71,9 @@
             <tr><th>First Name</th><th>Last Name</th><th>Position</th><th>Table</th></tr>
       </table>
 
- 	<!-- 
-   <div class = "col-lg-6" id="list">
- 	<p>
- 	<table class= "table table-striped table-responsive" id="adminList">
- 	<h3 class="centered"> Master Guest List</h3>
- 	<br>	
- 	<thead>
- 	<th>First Name</th>
- 	<th>Last Name</th>
- 	<th>Position</th>
- 	<th>Table</th>
- 	</thead>
- 	<tbody>
- 	{{# each guests}}
- 	<tr>
- 	<td>{{firstName}}<td>
- 	<td>{{lastName}}</td>
- 	<td>{{position}}</td>
-    <td>{{table}}</td>
-    </tr>
-    {{/each}}
-    </tbody>
-    </table> -->
-
-
-	<div id = "buttons">
-	<button id="tablesort">Sort by Table</button>
-	</div> 
-
+ 
 
 </div>
 </div>
 </div>
 
-</section>
