--- a/views/guest.handlebars
+++ b/views/guest.handlebars
@@ -2,7 +2,7 @@
 <div class="container" id="team" name="team">
     <br>
     <div class="row white centered">
-        <h2 class="centered">Say Hello to:</h2>
+        <h2 class="centered"><strong>Say Hello to:</strong></h2>
         <hr>
     
     </div>
@@ -14,7 +14,7 @@
      <img class="img img-circle" src="{{this.imagePath}}" height="120px" width="120px" alt="">
           <br>
           <h4><b>{{this.firstName}}  {{this.lastName}}</b></h4>
-          <a href="{{this.linkedin}}" ><img src="img/linkedin.png" height = "20px" width="20px"></a>
+          <a href="{{this.linkedin}}" ><img src="img/linkedin.png" height = "40px" width="40px"></a>
           <p>{{this.position}}</p>
           <p>Table number: {{this.table}}</p>
       </div><!-- col-lg-3 -->
