--- a/views/user/profile.handlebars
+++ b/views/user/profile.handlebars
@@ -1,22 +1,27 @@
+<section class="section-divider textdivider divider4">
 <div class="container" id="team" name="team">
     <br>
-    <br>
-    <br>
     <div class="row white centered">
-        <h1 class="centered">Your Table #:</h1>
-        <hr>
-        <br>
-        <br>
-        
+        <h2 class="centered">Welcome!</h2>
+        <h3 class="centered">Please enter your email address</h3>
+       <form action="" method="post" role="form">
+      <div class="col-md-6">
+        <label> Email</label>
+        <input type="text" id="userEmail" name="userEmail" class="form-control">
+      </div>
+      
+    
+    </div>
+    
 {{# each guests}}
-   <div class = "row white centered">
+   <div class= "row-sm-12">
    {{# each this}}
-     <div class="col-lg-3">
+     <div class="col-sm-4">
      <img class="img img-circle" src="{{this.imagePath}}" height="120px" width="120px" alt="">
           <br>
-          <h4><b>{{this.firstName}}{{this.lastName}}</b></h4>
+          <h4><b>{{this.firstName}}  {{this.lastName}}</b></h4>
           <a href="{{this.linkedin}}" ><img src="img/linkedin.png" height = "20px" width="20px"></a>
-          <p>position</p>
+          <p>{{this.position}}</p>
           <p>Table number: {{this.table}}</p>
       </div><!-- col-lg-3 -->
    
@@ -25,6 +30,7 @@
 </div><!--container-->
 {{/each}}
 </div>
+</section>
 
 <button type="button" class="btn btn-danger"><a href='guest'> See Full List of Attendees
           </a>
