--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,6 +15,8 @@
 <!-- Added sticky footer so footer sticks to the bottom of the page -->
 <link href="assets/css/sticky_footer.css" rel="stylesheet">
 
+<!--Favicon-->
+<link rel="shortcut icon" href="/PATH_TO_STATIC_FAVICON/favicon.ico" type="image/x-icon">
 
 
      <!-- Bootstrap core CSS -->
