--- a/views/guest.handlebars
+++ b/views/guest.handlebars
@@ -14,7 +14,7 @@
      <img class="img img-circle" src="{{this.imagePath}}" height="120px" width="120px" alt="">
           <br>
           <h4><b>{{this.firstName}}  {{this.lastName}}</b></h4>
-          <a href={{this.linkedin}} target="_blank"><img src="img/linkedin.png" height = "40px" width="40px"></a>
+          <a href="http://{{this.linkedin}}" target="_blank"><img src="img/linkedin.png" height = "40px" width="40px"></a>
           <p>{{this.position}}</p>
           <p>Table number: {{this.table}}</p>
       </div><!-- col-lg-3 -->
