--- a/views/user/profile.handlebars
+++ b/views/user/profile.handlebars
@@ -32,6 +32,6 @@
 </div>
 </section>
 
-<button type="button" class="btn btn-danger"><a href='guest'> See Full List of Attendees
+<button type="button" class="btn btn-danger center"><a href='guest'> See Full List of Attendees
           </a>
           </button>
